src/objects/TaxRollInterest__c.object
<CustomObject>
    <description>Tax Roll Interest to be imported from Drilling Info files.</description>
    <fields>
        <fullName>account__c</fullName>
        <formula>taxRollOwner__r.account__r.Name</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>calculatedInterest__c</fullName>
        <formula>if( interestType__c != &apos;NRI&apos;,  interest__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Interest</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>countyName__c</fullName>
        <label>County Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>estimatedAcreage__c</fullName>
        <formula>calculatedInterest__c  *  permitsWithAcreage__c * 8</formula>
        <label>Estimated Acreage</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>interestType__c</fullName>
        <label>Interest Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>interest__c</fullName>
        <label>Interest</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>legalDescription__c</fullName>
        <label>Legal Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>permitAcresUserOverride__c</fullName>
        <formula>rrcLease__r.permitAcresUserOverride__c</formula>
        <label>Permit Acres User Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>permitsWithAcreage__c</fullName>
        <formula>if(ISBLANK(rrcLease__r.permitAcresUserOverride__c), if(ISBLANK(rrcLease__r.texasPermitWithAcre__c),0,rrcLease__r.texasPermitWithAcre__r.permittedAcres__c), rrcLease__r.permitAcresUserOverride__c)</formula>
        <label>Permits with Acreage</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rrcLeaseNumber__c</fullName>
        <formula>rrcLease__r.rrcLeaseNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RRC Lease Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrcLease__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RRC Lease</label>
        <referenceTo>RRCLease__c</referenceTo>
        <relationshipLabel>Tax Roll Interests</relationshipLabel>
        <relationshipName>TaxRollInterests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>taxRollOwnerName__c</fullName>
        <formula>taxRollOwner__r.ownerName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Roll Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>taxRollOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Roll Owner</label>
        <referenceTo>TaxRollOwner__c</referenceTo>
        <relationshipLabel>Tax Roll Interests</relationshipLabel>
        <relationshipName>TaxRollInterests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>taxValue__c</fullName>
        <label>Tax Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>year__c</fullName>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Tax Roll Interest</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>taxRollOwnerName__c</columns>
        <columns>countyName__c</columns>
        <columns>calculatedInterest__c</columns>
        <columns>estimatedAcreage__c</columns>
        <columns>interest__c</columns>
        <columns>interestType__c</columns>
        <columns>year__c</columns>
        <columns>legalDescription__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Howard_2019</fullName>
        <columns>NAME</columns>
        <columns>countyName__c</columns>
        <columns>calculatedInterest__c</columns>
        <columns>estimatedAcreage__c</columns>
        <columns>interest__c</columns>
        <columns>interestType__c</columns>
        <columns>year__c</columns>
        <columns>taxRollOwnerName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>countyName__c</field>
            <operation>equals</operation>
            <value>Howard</value>
        </filters>
        <label>All - Howard 2019</label>
    </listViews>
    <listViews>
        <fullName>All_Martin_2019</fullName>
        <columns>NAME</columns>
        <columns>countyName__c</columns>
        <columns>calculatedInterest__c</columns>
        <columns>estimatedAcreage__c</columns>
        <columns>interest__c</columns>
        <columns>interestType__c</columns>
        <columns>year__c</columns>
        <columns>account__c</columns>
        <columns>taxRollOwner__c</columns>
        <columns>taxRollOwnerName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>countyName__c</field>
            <operation>equals</operation>
            <value>Martin</value>
        </filters>
        <filters>
            <field>taxRollOwnerName__c</field>
            <operation>contains</operation>
            <value>ROCK RIVER</value>
        </filters>
        <label>All - Martin 2019</label>
    </listViews>
    <listViews>
        <fullName>All_Midland_2019</fullName>
        <columns>NAME</columns>
        <columns>countyName__c</columns>
        <columns>calculatedInterest__c</columns>
        <columns>estimatedAcreage__c</columns>
        <columns>interest__c</columns>
        <columns>interestType__c</columns>
        <columns>year__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>countyName__c</field>
            <operation>equals</operation>
            <value>Midland</value>
        </filters>
        <filters>
            <field>year__c</field>
            <operation>equals</operation>
            <value>2019</value>
        </filters>
        <label>All - Midland 2019</label>
    </listViews>
    <listViews>
        <fullName>BY_RRC_Lease_Number</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>BY RRC Lease Number</label>
    </listViews>
    <nameField>
        <displayFormat>TRI-{0000000000}</displayFormat>
        <label>Tax Roll Interest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Roll Interests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>